# canard_test

./: .gitignore  README.md  pyproject.toml
canard/: constants.py  run_model.py  train_t5.py
tests/: test_canard.py
