[tool.poetry]
name = "CANARD"
version = "0.1.0"
description = ""
authors = ["taras <4751652+tezer@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.8.2"
torch = "^1.9.0"
sentencepiece = "^0.1.96"
pytorch-lightning = "^1.3.8"
numpy = "^1.21.1"
pandas = "^1.3.0"
termcolor = "^1.1.0"
labels = "^20.1.0"
batch = "^0.1"
self = "^2020.12.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
